--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -21,7 +21,9 @@
           <input class="w3-input" type="password" name="contr" id="contr">
           </br>
           <button class="w3-button w3-blue w3-padding" type="submit" name="ingresar" id="ingresar">Ingresar</button>
-          <button class="w3-button w3-blue w3-padding" type="submit" name="Registrarse" id="registrarse" onclick="window.location.href='/Users/pc/Documents/Schujman/registrarme.html'">Registrarse</button>
+          <button class="w3-button w3-blue w3-padding" type="submit" name="Registrarse" id="registrarse" href="registrarme.html'">
+          <a href="registrarme.html">Registrarse</a>
+          </button>
           </br>
           </br>
           <a  class="olvide" href="google.com"> He olvidado mi contraseña </a>
