--- a/registrarme.html
+++ b/registrarme.html
@@ -28,7 +28,9 @@
            <label class="w3-label">Contraseña</label>
            <input class="w3-input" type="password" name="contr" id="contr">
            </br>
-           <button class="w3-button w3-blue w3-padding" type="submit" name="Registrarse" id="registrarse">Registrarse</button>
+           <button class="w3-button w3-blue w3-padding" type="submit" name="Registrarse" id="registrarse">
+            <a href="index.html">Registrarse</a>
+            </button>
            </br>
            </br>
          </form>
