intento de verfificar correo

--- a/registrarme.html
+++ b/registrarme.html
@@ -21,15 +21,15 @@
            <input class="w3-input" type="text" name="apellido" id="apellido">
            <label class="w3-label">Nombre de usuario</label>
            <input class="w3-input" type="text" name="user" id="user">
-           <label class="w3-label">Edad</label>
-           <input class="w3-input" type="text" name="edad" id="edad">
+           <label class="w3-label">email</label>
+           <input class="w3-input" type="text" name="edad" id="edad" placeholder="name@examle.com">
            <label class="w3-label">Frase celebre favorita</label>
            <input class="w3-input" type="text" name="frase" id="frase">
            <label class="w3-label">Contraseña</label>
            <input class="w3-input" type="password" name="contr" id="contr">
            </br>
            <button class="w3-button w3-blue w3-padding" type="submit" name="Registrarse" id="registrarse">
-            <a href="index.html">Registrarse</a>
+            <a>Registrarse</a>
             </button>
            </br>
            </br>
